--- a/portfolio.html
+++ b/portfolio.html
@@ -11,155 +11,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="site-nav">
-            <a class="logo" lang="en" href="#">
-                <span class="logo-part" lang="en">Web</span>Studio
-            </a>
-            <ul class="list">
-                <li class="item">
-                    <a class="link" href="./index.html">
-                        Студия
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link current" href="./portfolio.html">
-                        Портфолио
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#">
-                        Контакты
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="contacts list">
-            <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">
-                    info@devstudio.com
+    <header class="page-header">
+        <div class="container">
+            <nav class="site-nav">
+                <a class="logo" lang="en" href="#">
+                    <span class="logo-part" lang="en">Web</span>Studio
                 </a>
-            </li>
-            <li class="item">
-                <a class="link" href="tel:+380961111111">
-                    +38 096 111 11 11
-                </a>
-            </li>
-        </ul>
-    </header>
-    <main>
-        <section class="catalog">
-            <h1 class="section-title" lang="en">
-                Catalog
-            </h1>
-            <ul class="menu-list list">
-                <li class="item">
-                    <button type="button" class="btn primary">
-                        Все
-                    </button>
-                </li>
-                <li class="item">
-                    <button type="button" class="btn primary">
-                        Веб-сайты
-                    </button>
-                <li class="item">
-                    <button type="button" class="btn primary">
-                        Приложения
-                    </button>
-                </li>
-                <li class="item">
-                    <button type="button" class="btn primary">
-                        Дизайн
-                    </button>
-                </li>
-                <li class="item">
-                    <button type="button" class="btn primary">
-                        Маркетинг
-                    </button>
-                </li>
-            </ul>
-            <ul class="catalog-list list">
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="title">Технокряк</h2>
-                        <p class="inform">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
-                        <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="inform">Дизайн</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
-                        <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                        <p class="inform">Приложение</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
-                        <h2 class="title">Проект <span lang="en">Prime</span></h2>
-                        <p class="inform">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
-                        <h2 class="title">Проект<span lang="en">Boxes</span></h2>
-                        <p class="inform">Приложение</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="title" lang="en">Inspiration has no Borders</h2>
-                        <p class="inform">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
-                        <h2 class="title">Издание<span lang="en">Limited Edition</span></h2>
-                        <p class="inform">Дизайн</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
-                        <h2 class="title">Проект<span lang="en">LAB</span></h2>
-                        <p class="inform">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
-                        <h2 class="title" lang="en">Growing Business</h2>
-                        <p class="inform">Приложение</p>
-                    </a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <a class="logo" lang="en" href="#">
-            <span class="logo-part" lang="en">Web</span>Studio
-        </a>
-        <address>
-            <ul class="address list">
-                <li class="item">
-                    <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
-                        г. Киев, пр-т Леси Украинки, 26
-                    </a>
-                </li>
+                <ul class="list">
+                    <li class="item">
+                        <a class="link" href="./index.html">
+                            Студия
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link current" href="./portfolio.html">
+                            Портфолио
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="contacts list">
                 <li class="item">
                     <a class="link" href="mailto:info@devstudio.com">
                         info@devstudio.com
@@ -171,7 +52,135 @@
                     </a>
                 </li>
             </ul>
-        </address>
+        </div>
+    </header>
+    <main>
+        <section class="catalog">
+            <div class="container container-menu">
+                <h1 class="section-title" lang="en">
+                    Catalog
+                </h1>
+                <ul class="menu-list list">
+                    <li class="item">
+                        <button type="button" class="btn">
+                            Все
+                        </button>
+                    </li>
+                    <li class="item">
+                        <button type="button" class="btn">
+                            Веб-сайты
+                        </button>
+                    <li class="item">
+                        <button type="button" class="btn">
+                            Приложения
+                        </button>
+                    </li>
+                    <li class="item">
+                        <button type="button" class="btn">
+                            Дизайн
+                        </button>
+                    </li>
+                    <li class="item">
+                        <button type="button" class="btn">
+                            Маркетинг
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            <div class="container container-catalog">
+                <ul class="catalog-list list">
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
+                            <h2 class="title">Технокряк</h2>
+                            <p class="inform">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
+                            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                            <p class="inform">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
+                            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                            <p class="inform">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
+                            <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                            <p class="inform">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
+                            <h2 class="title">Проект<span lang="en">Boxes</span></h2>
+                            <p class="inform">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
+                            <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                            <p class="inform">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
+                            <h2 class="title">Издание<span lang="en">Limited Edition</span></h2>
+                            <p class="inform">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
+                            <h2 class="title">Проект<span lang="en">LAB</span></h2>
+                            <p class="inform">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="">
+                            <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
+                            <h2 class="title" lang="en">Growing Business</h2>
+                            <p class="inform">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <div class="container">
+            <a class="logo" lang="en" href="#">
+                <span class="logo-part" lang="en">Web</span>Studio
+            </a>
+            <address>
+                <ul class="address list">
+                    <li class="item">
+                        <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="mailto:info@devstudio.com">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="tel:+380961111111">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
