--- a/index.html
+++ b/index.html
@@ -11,48 +11,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="page-header">
-        <div class="container">
-            <nav class="site-nav">
-                <a class="logo" lang="en" href="#">
-                    <span class="logo-part" lang="en">Web</span>Studio
-                </a>
-                <ul class="list">
-                    <li class="item">
-                        <a class="link" href="./index.html">
-                            Студия
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link current" href="./portfolio.html">
-                            Портфолио
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href="#">
-                            Контакты
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="contacts list">
+        <nav class="site-nav">
+            <a class="logo" lang="en" href="#">
+                <span class="logo-part" lang="en">Web</span>Studio
+            </a>
+            <ul class="list">
                 <li class="item">
-                    <a class="link" href="mailto:info@devstudio.com">
-                        info@devstudio.com
+                    <a class="link current" href="./index.html">
+                        Студия
                     </a>
                 </li>
                 <li class="item">
-                    <a class="link" href="tel:+380961111111">
-                        +38 096 111 11 11
+                    <a class="link" href="./portfolio.html">
+                        Портфолио
+                    </a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#">
+                        Контакты
                     </a>
                 </li>
             </ul>
-        </div>
+        </nav>
+        <ul class="contacts list">
+            <li class="item">
+                <a class="link contact" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="item">
+                <a class="link contact" href="tel:+380961111111">
+                    +38 096 111 11 11
+                </a>
+            </li>
+        </ul>
     </header>
     <main>
         <section class="hero">
@@ -169,30 +165,28 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo" lang="en" href="#">
-                <span class="logo-part" lang="en">Web</span>Studio
-            </a>
-            <address>
-                <ul class="address list">
-                    <li class="item">
-                        <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
-                            г. Киев, пр-т Леси Украинки, 26
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href="mailto:info@devstudio.com">
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href="tel:+380961111111">
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
-            </address>
-        </div>
+        <a class="logo" lang="en" href="#">
+            <span class="logo-part" lang="en">Web</span>Studio
+        </a>
+        <address>
+            <ul class="address list">
+                <li class="item">
+                    <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
+                </li>
+                <li class="item">
+                    <a class="link contact" href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="item">
+                    <a class="link contact" href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>   
+        </address>
     </footer>
 </body>
 </html>
